--- a/src/app/components/aboutsection.module.css
+++ b/src/app/components/aboutsection.module.css
@@ -43,7 +43,15 @@
 }
 
 .Linkto {
-  color: black;
+  font-weight: 700;
   text-decoration: none;
-  font-weight: 600;
+  background-image: linear-gradient(currentColor, currentColor);
+  background-size: 0% 2px;
+  background-position: 0 100%;
+  background-repeat: no-repeat;
+  transition: background-size 0.3s ease;
+}
+
+.Linkto:hover {
+  background-size: 100% 2px;
 }
