--- a/src/app/components/expsection.module.css
+++ b/src/app/components/expsection.module.css
@@ -10,6 +10,12 @@
   background: linear-gradient(90deg, #004aad, #cb6ce6);
 }
 
+.expcontainer h1 {
+  color: rgb(217, 226, 236);
+  font-weight: 900;
+  margin: 1rem;
+}
+/*
 .JobContainer {
   display: flex;
   flex-direction: row;
@@ -95,12 +101,6 @@
     display: flex;
     justify-content: center;
   }
-
-  /* .CardImage {
-    width: 100%;
-    max-width: 200px;
-
-  } */
 }
 
 .CardDescription p {
@@ -123,14 +123,6 @@
   margin-bottom: 1rem;
 }
 
-.resumeContainer {
-  /* display: flex;
-  justify-content: left;
-  align-items: self-start;
-  margin-top: 2rem; */
-  /* background: linear-gradient(90deg, #004aad, #cb6ce6); */
-}
-
 .swipecontainer {
   display: flex;
   overflow-x: auto;
@@ -147,4 +139,214 @@
   border-radius: 12px;
   padding: 1rem;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+} */
+
+
+.slider {
+  width: 330px;
+  text-align: center;
+  overflow: hidden;
+}
+
+.slides {
+  display: flex;
+
+  overflow-x: auto;
+  scroll-snap-type: x mandatory;
+
+
+
+  scroll-behavior: smooth;
+  -webkit-overflow-scrolling: touch;
+
+
+  scroll-snap-points-x: repeat(300px);
+  scroll-snap-type: mandatory;
+
+}
+
+.slides::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+.slides::-webkit-scrollbar-thumb {
+  background: rgba(255, 255, 255, 0.14);
+  border-radius: 10px;
+}
+
+.slides::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+.slides>div {
+  scroll-snap-align: start;
+  flex-shrink: 0;
+  width: 330px;
+  height: 350px;
+  margin-right: 1rem;
+  background: rgba(255, 255, 255, 0.14);
+  transform-origin: center center;
+  transform: scale(1);
+  transition: transform 0.5s;
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+  font-size: 11px;
+  color: rgb(217, 226, 236);
+  border-radius: 50px;
+}
+
+.slideConTags {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 8px;
+}
+
+.tag {
+  font-size: 0.75rem;
+  background: rgba(255, 255, 255, 0.14);
+  color: rgb(217, 226, 236);
+  padding: 4px 12px;
+  border-radius: 9999px;
+  box-shadow:
+    0 20px 40px rgba(0, 74, 173, 0.3),
+    0 10px 20px rgba(203, 108, 230, 0.2),
+    0 0 30px rgba(0, 74, 173, 0.1);
+  backdrop-filter: blur(19.8px);
+  -webkit-backdrop-filter: blur(6.1px);
+}
+
+.slideTitle {
+  font-weight: bold;
+  font-size: 1.5rem;
+  margin: 0.25rem;
+}
+
+.slideImage {
+  border-radius: 10px;
+}
+
+.slideConRight {
+  font-size: 0.75rem;
+  font-weight: medium;
+  margin: 0.25rem;
+}
+
+@media screen and (min-width: 768px) {
+  .slides>div {
+    width: 900px;
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    background: rgba(255, 255, 255, 0.14);
+    border-radius: 50px;
+    margin: 0.5rem 0.5rem;
+  }
+
+  .slideContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .slideConLeft {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .slideConRight {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .slideConTags {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 8px;
+  }
+
+  .tag {
+    font-size: 0.75rem;
+    background: rgba(255, 255, 255, 0.14);
+    color: rgb(217, 226, 236);
+    padding: 4px 12px;
+    border-radius: 9999px;
+    box-shadow:
+      0 20px 40px rgba(0, 74, 173, 0.3),
+      0 10px 20px rgba(203, 108, 230, 0.2),
+      0 0 30px rgba(0, 74, 173, 0.1);
+    backdrop-filter: blur(19.8px);
+    -webkit-backdrop-filter: blur(6.1px);
+  }
+
+  .slideImage {
+    border-radius: 10px;
+    margin: 1rem;
+  }
+
+  .slider {
+    width: 900px;
+  }
+}
+
+.slides>div:target {
+  transform: scale(0.8);
+}
+
+.author-info {
+  background: rgba(0, 0, 0, 0.75);
+  color: white;
+  padding: 0.75rem;
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  margin: 0;
+}
+
+.author-info a {
+  color: white;
+}
+
+.slider>a {
+  display: inline-flex;
+  width: 1.5rem;
+  height: 1.5rem;
+  background: rgba(255, 255, 255, 0.14);
+  text-decoration: none;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  margin: 0.2rem;
+  margin-bottom: 0.5rem;
+  position: relative;
+  color: rgb(217, 226, 236);
+}
+
+.slider>a:active {
+  top: 1px;
+}
+
+.slider>a:focus {
+  background: #000;
+}
+
+@supports (scroll-snap-type) {
+  .slider>a {
+    display: none;
+  }
 }
